metodos adicionales generadores

--- a/Python/Hilos_Procesos_Asincronismo/Hilos_Procesos_Asincronismo.ipynb
+++ b/Python/Hilos_Procesos_Asincronismo/Hilos_Procesos_Asincronismo.ipynb
@@ -102,13 +102,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object <genexpr> at 0x7f79986fce40>\n"
+      "<generator object <genexpr> at 0x7f2e47020c80>\n"
      ]
     }
    ],
    "source": [
-    "lenguaje = (valor for valor in ['Python', 'Java', 'Scala'])\n",
-    "print(lenguaje)"
+    "lenguajes = (valor for valor in ['Python', 'Java', 'Scala'])\n",
+    "print(lenguajes)"
    ]
   },
   {
@@ -139,10 +139,10 @@
     }
    ],
    "source": [
-    "iterador_generadores(lenguaje)\n",
+    "iterador_generadores(lenguajes)\n",
     "\n",
     "# elimina la variable creada, recupera el espacio de la variable liberandolo de la memoria con el garbage collector\n",
-    "del lenguaje\n",
+    "del lenguajes\n",
     "garbage_colector.collect(), garbage_colector.get_threshold()"
    ]
   },
@@ -203,15 +203,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'lenguaje' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 19>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m lista_generador()\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCinco\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnumeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36mnumeros\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUno\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDos\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01myield\u001b[39;00m \u001b[43mlenguaje\u001b[49m()\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01myield from\u001b[39;00m astronomia()\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTres\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'lenguaje' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Uno', 'Dos', <generator object lenguaje at 0x7f2e47020e40>, 'Sol', 'Luna', 'Estrellas', 'Galaxias', 'Planetas', 'Tres', 'Cuatro', <generator object lista_generador at 0x7f2e47020eb0>, 'Cinco']\n"
      ]
     }
    ],
@@ -247,13 +242,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fae23f23-b809-4dcb-9247-d4bbced6a06a",
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>] 4\n",
+      "J\n",
+      "[<generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 4\n",
+      "Python\n",
+      "[<generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>] 4\n",
+      "Sol\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>] 4\n",
+      "Uno\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>] 4\n",
+      "o\n",
+      "[<generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 4\n",
+      "Java\n",
+      "[<generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>] 4\n",
+      "Luna\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>] 4\n",
+      "Dos\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>] 4\n",
+      "r\n",
+      "[<generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 4\n",
+      "Scala\n",
+      "[<generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>] 4\n",
+      "Estrellas\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>] 4\n",
+      "<generator object lenguaje at 0x7f2e470212a0>\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>] 4\n",
+      "g\n",
+      "[<generator object lenguaje at 0x7f2e47020dd0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 4\n",
+      "<generator object lenguaje at 0x7f2e47020dd0> -> Generador sin elementos , es una  <class 'generator'>\n",
+      "[<generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 3\n",
+      "Galaxias\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>, <generator object astronomia at 0x7f2e47020f20>] 3\n",
+      "Sol\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>] 3\n",
+      "e\n",
+      "[<generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 3\n",
+      "Planetas\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>, <generator object astronomia at 0x7f2e47020f20>] 3\n",
+      "Luna\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>] 3\n",
+      "C\n",
+      "[<generator object astronomia at 0x7f2e47020f20>, <generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 3\n",
+      "<generator object astronomia at 0x7f2e47020f20> -> Generador sin elementos , es una  <class 'generator'>\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 2\n",
+      "Estrellas\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object numeros at 0x7f2e470211c0>] 2\n",
+      "a\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 2\n",
+      "Galaxias\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object numeros at 0x7f2e470211c0>] 2\n",
+      "r\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 2\n",
+      "Planetas\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object numeros at 0x7f2e470211c0>] 2\n",
+      "d\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 2\n",
+      "Tres\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object numeros at 0x7f2e470211c0>] 2\n",
+      "o\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 2\n",
+      "Cuatro\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object numeros at 0x7f2e470211c0>] 2\n",
+      "n\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 2\n",
+      "<generator object lista_generador at 0x7f2e470212a0>\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object numeros at 0x7f2e470211c0>] 2\n",
+      "a\n",
+      "[<generator object numeros at 0x7f2e470211c0>, <generator object lista_generador at 0x7f2e47020eb0>] 2\n",
+      "Cinco\n",
+      "[<generator object lista_generador at 0x7f2e47020eb0>, <generator object numeros at 0x7f2e470211c0>] 2\n",
+      "<generator object lista_generador at 0x7f2e47020eb0> -> Generador sin elementos , es una  <class 'generator'>\n",
+      "[<generator object numeros at 0x7f2e470211c0>] 1\n",
+      "<generator object numeros at 0x7f2e470211c0> -> Generador sin elementos , es una  <class 'generator'>\n"
+     ]
+    }
+   ],
    "source": [
     "def iterador_tareas(lista_funciones):    \n",
     "    # itera la lista de funciones con generadores\n",
@@ -287,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "35e7a3e7-e575-4289-acf2-d9fcb5b1a0a0",
    "metadata": {},
    "outputs": [],
@@ -301,20 +375,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "728bd814-07e9-4f38-9d66-c7dffec471e2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'gen' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m20\u001b[39m):\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28mnext\u001b[39m(\u001b[43mgen\u001b[49m)\n\u001b[1;32m      3\u001b[0m     x \u001b[38;5;241m=\u001b[39m i\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m      4\u001b[0m     y \u001b[38;5;241m=\u001b[39m i\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'gen' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el valor de 5 + 10 es 15\n",
+      "el valor de 5 + 11 es 16\n",
+      "el valor de 6 + 12 es 18\n",
+      "el valor de 6 + 13 es 19\n",
+      "el valor de 7 + 14 es 21\n",
+      "el valor de 7 + 15 es 22\n",
+      "el valor de 8 + 16 es 24\n",
+      "el valor de 8 + 17 es 25\n",
+      "el valor de 9 + 18 es 27\n",
+      "el valor de 9 + 19 es 28\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, (700, 10, 10))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
