--- a/Python/ITERABLES_ITERADORES_GENERADORES/ITERABLES_ITERADORES_GENERADORES.ipynb
+++ b/Python/ITERABLES_ITERADORES_GENERADORES/ITERABLES_ITERADORES_GENERADORES.ipynb
@@ -72,27 +72,7 @@
    ],
    "source": [
     "def is_palindrome(cadena):\n",
-    "    \n",
-    "    valores = str(abs(cadena)) if type(int) else cadena\n",
-    "    \n",
-    "    cantidad_elementos_lista = len(valores)\n",
-    "    centro = cantidad_elementos_lista//2\n",
-    "\n",
-    "    if cantidad_elementos_lista < 2:\n",
-    "        return False\n",
-    "    \n",
-    "    elif cantidad_elementos_lista %2 == 0:\n",
-    "        \n",
-    "        izquierda = valores[:centro]\n",
-    "        derecha = valores[centro:][::-1] # invierte el orden de los caracteres de la cadena dividida \n",
-    "        \n",
-    "        return izquierda == derecha        \n",
-    "\n",
-    "    else:\n",
-    "        izquierda = valores[:centro]\n",
-    "        derecha = valores[centro + 1:][::-1] # invierte el orden de los caracteres de la cadena dividida \n",
-    "        \n",
-    "        return izquierda == derecha\n",
+    "        return str(cadena) == str(cadena)[::-1]\n",
     "    \n",
     "listado = list()\n",
     "\n",
