informacion adicionada sobre los pasos del paradigma map-reduce

--- a/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_MapReduce.ipynb
+++ b/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_MapReduce.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>FASES **MAP-REDUCE**\n",
+    "# <center>FASES DEL PARADIGMA **MAP-REDUCE**\n",
     "<img src=\"MapReduce-fases.png\">"
    ]
   },
