adicionado la informacion relacionada con YARN

--- a/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_Fundamentos.ipynb
+++ b/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_Fundamentos.ipynb
@@ -4,23 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> COMPONENTES HADOOP\n",
+    "# <center> HADOOP STACK\n",
     "<img src=\"HadoopStack.png\">"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# <center> HADOOP COMMONS"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,15 +19,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> YARN"
+    "# <center> COMPONENTES HADOOP\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"HadoopComponentes.png\">\n",
+    "</div>."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# <center> **HADOOP COMMON** </center>\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"commons.png\">\n",
+    "</div>\n",
+    "\n",
+    "## - Contiene los archivos y scripts Java Archive (JAR) necesarios para iniciar Hadoop.\n",
+    "## - Colección de utilidades y bibliotecas comunes que son necesarias para los otros módulos de Hadoop.\n",
+    "## - Proporciona código fuente y documentación. \n",
+    "## - Cuenta con una sección de contribuciones que contienen multiples proyectos de la comunidad de Hadoop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> **HADOOP YARN** </center>\n",
+    "\n",
+    "## **YARN** funciona a través de un **Resource Manager** que es uno por nodo y un **Node Manager** que se ejecuta en todos los nodos.\n",
+    "\n",
+    "* **Resource Manager** Administra los recursos utilizados en el clúster, **provee un endpoint a los clientes para hacer la solicitud de envio de Jobs**.\n",
+    "    * **Scheduler** Programa los recursos a las **aplicaciones en ejecución en función de los requisitos, la capacidad y la cola**. **No garantiza reiniciar las tareas fallidas**.\n",
+    "    * **Application Manager** administra la ejecución de **Application Master en un clúster** y, en caso de falla del contenedor de Application Master, **ayuda a reiniciarlo**. Asimismo, tiene la responsabilidad de aceptar los Jobs enviados.\n",
+    "\n",
+    "   \n",
+    "* **Node Manager** Monitorea los **Containers** y Crea **Containers** basado en los requerimientos de la Task, es Responsable de la **ejecución de las Tasks en cada DataNode**. \n",
+    "\n",
+    "* **Containers** Conjunto de recursos como **RAM, CPU, GPU, Disco, Red** de un Nodo o **Host del Cluster**. Son programados por **Resource Manager** y monitoreados por **Node Manager**.\n",
+    "\n",
+    "* **Application Master** Es **creado por un Job** y controla la monitorización y la **ejecución de las tareas usando el Container**, es el que **Negocia los recursos para el Job con el Resource Manager**. Gestiona el ciclo de vida de los **Jobs que se ejecutan en el clúster hasta que se completen**.\n",
+    "\n",
+    "* **History Server** es el encargado de **Almacenar el historial de todos los Jobs**.\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"yarn.png\">\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,6 +72,27 @@
    "source": [
     "# <center> HDFS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
