adicionada definicion de archivos para HDFS

--- a/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_Fundamentos.ipynb
+++ b/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_Fundamentos.ipynb
@@ -9,17 +9,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# <center> **QUE ES HADOOP** </center>\n",
+    "\n",
+    "# Es un framework para **Almacenamiento y Procesamiento de lotes con altos volumenes de datos** de manera distribuida y ejecucion de tareas en paralelo"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> COMPONENTES HADOOP\n",
+    "# <center> **COMPONENTES HADOOP** </center>\n",
     "<div style=\"text-align:center\">\n",
     "    <img src=\"HadoopComponentes.png\">\n",
     "</div>."
@@ -70,15 +72,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> HDFS"
+    "# <center> HDFS **HADOOP DISTRIBUTE FILE SYSTEM** Y HCFS **HADOOP COMPATIBLE FILE SYSTEM**"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Archivos**\n",
+    "- Los Archivos que se guardan en el **HDFS son inmutables** y se pueden leer tantas veces como se quiera, por la inmutabilidad no se pueden modificar los archivos.\n",
+    "- Los archivos que se van a almacenar en el HDFS **se recomienda que sean de 128 Megas** o mas.\n",
+    "\n",
+    "- Muchos **Archivos pequeños hacen ineficientes el procesamiento** y el almacenamiento, hay varias razones por las cuales se generan archivos de bajo peso como:\n",
+    "    * Los archivos pueden ser la pieza de un archivo lógico más grande. \n",
+    "    * Algunos archivos no se pueden combinar en un archivo más grande y son esencialmente pequeños. aunque se comprima un set de imagenes en un archivo que ocupe las 128 megas recomendadas cuando se procesen estas imagenes, se hara de manera separada imagen por imagen, ya que donde cada imagen es un archivo distinto, haciendo ineficiente el proceso.\n",
+    "    \n",
+    "\n",
+    "- **Efectos de los archivos pequeños**: \n",
+    "    - HDFS no puede manejar de manera eficiente el almacenamiento de muchos archivos pequeños que son extremadamente pequeños que el tamaño del bloque. \n",
+    "    - La lectura de archivos pequeños implica muchas búsquedas y muchos saltos entre nodos de datos, lo que a su vez es un procesamiento de datos ineficiente.\n",
+    "    - En la memoria de namenode, cada archivo, directorio y bloque en HDFS se representa como un objeto. Cada uno de estos objetos tiene un tamaño de 150 bytes.\n",
+    "    - Si consideramos 10 millones de archivos pequeños, cada uno de estos archivos usará un bloque separado. Eso provocará un uso de 3 gigas de memoria.\n",
+    "    - Con las limitaciones de hardware que tiene, escalar más allá de este nivel es un problema. \n",
+    "    - Con muchos archivos, la memoria requerida para almacenar los metadatos es alta y no se puede escalar más allá de un límite.\n",
+    "    - En MapReduce, la tarea Map procesa un bloque de datos a la vez. \n",
+    "    - Muchos archivos pequeños significan muchos bloques, lo que significa muchas tareas y mucha contabilidad por parte de Application Master.\n",
+    "    - Esto ralentizará el rendimiento general del clúster en comparación con el procesamiento de archivos grandes.\n",
+    "\n",
+    "    **Alternativas**:\n",
+    "\n",
+    "    **1\\. Archivos Hadoop, HAR**:\n",
+    "     - Hadoop Archives o HAR es una instalación de archivo que empaqueta archivos en bloques HDFS de manera eficiente. No relacione los archivos .har con archivos comprimidos.\n",
+    "     - HAR se crea a partir de una colección de archivos y la herramienta de archivo (un comando simple) ejecutará un trabajo de MapReduce para procesar los archivos de entrada en paralelo y crear un archivo de archivos.\n",
+    "     - los pequeños archivos dentro del archivo .har serán procesados individualmente por mapeadores separados, lo cual es ineficiente.\n",
+    "\n",
+    "    **2\\. SequenceFile System**:\n",
+    "     * Use el nombre de cada archivo como clave y el contenido del cada archivo como valor.\n",
+    "     * Puede ser procesados en forma de Streaming (directamente o usando MapReduce) operando en SequenceFile\n",
+    "     * Se pueden dividir, por lo que MapReduce puede dividirlos en fragmentos y operar en cada fragmento de forma independiente.\n",
+    "     * Admiten compresión, a diferencia de los HAR. La compresión de bloques es la mejor opción en la mayoría de los casos, ya que comprime bloques de varios registros (en lugar de por registro).\n",
+    "\n",
+    "    **3\\. HBase si no es un problema la latencia**:\n",
+    "     - Si está produciendo muchos archivos pequeños, entonces, dependiendo del patrón de acceso, un tipo diferente de almacenamiento podría ser más apropiado.\n",
+    "     - Almacena datos en MapFiles (SequenceFiles indexados) y es una buena opción si necesita realizar análisis Streaming de estilo MapReduce con la búsqueda aleatoria ocasional."
+   ]
   },
   {
    "cell_type": "code",
