dockerfile descarga hadoop-spark del repo de apache y foto kernel jupyterlab

--- a/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_Fundamentos.ipynb
+++ b/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_Fundamentos.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -555,34 +555,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Snappy</th>\n",
-       "      <td>snappy</td>\n",
-       "      <td>.snappy</td>\n",
-       "      <td>NO</td>\n",
+       "      <th>LZ4</th>\n",
+       "      <td>lz4</td>\n",
+       "      <td>.lz4</td>\n",
+       "      <td>SI</td>\n",
        "      <td>BAJO</td>\n",
        "      <td>RAPIDO</td>\n",
-       "      <td>RAPIDO</td>\n",
-       "      <td>Parquet, ORC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bzip2</th>\n",
-       "      <td>bzip2</td>\n",
-       "      <td>.bz2</td>\n",
-       "      <td>SI</td>\n",
-       "      <td>ALTO</td>\n",
-       "      <td>LENTO</td>\n",
-       "      <td>LENTO</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Zlib</th>\n",
-       "      <td>zlib</td>\n",
-       "      <td>.zlib</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>tiene 10 niveles</td>\n",
-       "      <td>depende del nivel de compresion</td>\n",
-       "      <td>depende del nivel de compresion</td>\n",
-       "      <td>ORC</td>\n",
+       "      <td>MUY RAPIDO</td>\n",
+       "      <td>Parquet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gzip</th>\n",
@@ -595,6 +575,26 @@
        "      <td>Parquet</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>Snappy</th>\n",
+       "      <td>snappy</td>\n",
+       "      <td>.snappy</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>BAJO</td>\n",
+       "      <td>RAPIDO</td>\n",
+       "      <td>RAPIDO</td>\n",
+       "      <td>Parquet, ORC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zlib</th>\n",
+       "      <td>zlib</td>\n",
+       "      <td>.zlib</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>tiene 10 niveles</td>\n",
+       "      <td>depende del nivel de compresion</td>\n",
+       "      <td>depende del nivel de compresion</td>\n",
+       "      <td>ORC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>LZO</th>\n",
        "      <td>lzo</td>\n",
        "      <td>.lzo</td>\n",
@@ -605,14 +605,14 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LZ4</th>\n",
-       "      <td>lz4</td>\n",
-       "      <td>.lz4</td>\n",
+       "      <th>Bzip2</th>\n",
+       "      <td>bzip2</td>\n",
+       "      <td>.bz2</td>\n",
        "      <td>SI</td>\n",
-       "      <td>BAJO</td>\n",
-       "      <td>RAPIDO</td>\n",
-       "      <td>MUY RAPIDO</td>\n",
-       "      <td>Parquet</td>\n",
+       "      <td>ALTO</td>\n",
+       "      <td>LENTO</td>\n",
+       "      <td>LENTO</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -620,42 +620,43 @@
       ],
       "text/plain": [
        "         Codec   Extension Divisible Nivel de Compresion  \\\n",
-       "Snappy  snappy     .snappy        NO                BAJO   \n",
-       "Bzip2    bzip2        .bz2        SI                ALTO   \n",
-       "Zlib      zlib       .zlib        NO    tiene 10 niveles   \n",
-       "Gzip      gzip  .gz - .tgz        NO               MEDIO   \n",
-       "LZO        lzo        .lzo        NO               MEDIO   \n",
        "LZ4        lz4        .lz4        SI                BAJO   \n",
+       "Gzip      gzip  .gz - .tgz        NO               MEDIO   \n",
+       "Snappy  snappy     .snappy        NO                BAJO   \n",
+       "Zlib      zlib       .zlib        NO    tiene 10 niveles   \n",
+       "LZO        lzo        .lzo        NO               MEDIO   \n",
+       "Bzip2    bzip2        .bz2        SI                ALTO   \n",
        "\n",
        "                Velocidad de Compresion       Velocidad de Descompresion  \\\n",
-       "Snappy                           RAPIDO                           RAPIDO   \n",
-       "Bzip2                             LENTO                            LENTO   \n",
-       "Zlib    depende del nivel de compresion  depende del nivel de compresion   \n",
-       "Gzip                              MEDIO                            MEDIO   \n",
-       "LZO                              RAPIDO                           RAPIDO   \n",
        "LZ4                              RAPIDO                       MUY RAPIDO   \n",
+       "Gzip                              MEDIO                            MEDIO   \n",
+       "Snappy                           RAPIDO                           RAPIDO   \n",
+       "Zlib    depende del nivel de compresion  depende del nivel de compresion   \n",
+       "LZO                              RAPIDO                           RAPIDO   \n",
+       "Bzip2                             LENTO                            LENTO   \n",
        "\n",
        "       Archivos Compatibles  \n",
-       "Snappy         Parquet, ORC  \n",
-       "Bzip2                        \n",
-       "Zlib                    ORC  \n",
+       "LZ4                 Parquet  \n",
        "Gzip                Parquet  \n",
+       "Snappy         Parquet, ORC  \n",
+       "Zlib                    ORC  \n",
        "LZO                          \n",
-       "LZ4                 Parquet  "
+       "Bzip2                        "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "algoritmos = {'Snappy':['snappy','.snappy','NO','BAJO','RAPIDO','RAPIDO','Parquet, ORC'],\n",
-    "              'Bzip2':['bzip2','.bz2','SI','ALTO','LENTO','LENTO',''],\n",
-    "              'Zlib':['zlib','.zlib','NO','tiene 10 niveles','depende del nivel de compresion','depende del nivel de compresion','ORC'],\n",
+    "algoritmos = {\n",
+    "              'LZ4':['lz4','.lz4','SI','BAJO','RAPIDO','MUY RAPIDO','Parquet'],\n",
     "              'Gzip':['gzip','.gz - .tgz','NO','MEDIO','MEDIO','MEDIO','Parquet'],\n",
-    "              'LZO':['lzo','.lzo','NO','MEDIO','RAPIDO','RAPIDO',''],\n",
-    "              'LZ4':['lz4','.lz4','SI','BAJO','RAPIDO','MUY RAPIDO','Parquet']              \n",
+    "              'Snappy':['snappy','.snappy','NO','BAJO','RAPIDO','RAPIDO','Parquet, ORC'],              \n",
+    "              'Zlib':['zlib','.zlib','NO','tiene 10 niveles','depende del nivel de compresion','depende del nivel de compresion','ORC'],\n",
+    "              'LZO':['lzo','.lzo','NO','MEDIO','RAPIDO','RAPIDO',''],              \n",
+    "              'Bzip2':['bzip2','.bz2','SI','ALTO','LENTO','LENTO',''],\n",
     "             }\n",
     "\n",
     "indices = ['Codec','Extension','Divisible','Nivel de Compresion', 'Velocidad de Compresion', 'Velocidad de Descompresion','Archivos Compatibles']\n",
@@ -666,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -711,6 +712,16 @@
        "      <td>Write Heavy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>Protobuff</th>\n",
+       "      <td>Binary</td>\n",
+       "      <td>Mensajes Intercambiados Entre 2 o mas Servicios</td>\n",
+       "      <td>Kafka</td>\n",
+       "      <td>POCO EFICIENTE AL COMPRIMIR</td>\n",
+       "      <td>Parcial</td>\n",
+       "      <td>Orientado A Filas</td>\n",
+       "      <td>Write Heavy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Parquet</th>\n",
        "      <td>Binary</td>\n",
        "      <td>Mensajes Intercambiados Entre 2 o mas Servicios</td>\n",
@@ -731,16 +742,6 @@
        "      <td>Read Heavy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Protobuff</th>\n",
-       "      <td>Binary</td>\n",
-       "      <td>Mensajes Intercambiados Entre 2 o mas Servicios</td>\n",
-       "      <td>Kafka</td>\n",
-       "      <td>POCO EFICIENTE AL COMPRIMIR</td>\n",
-       "      <td>Parcial</td>\n",
-       "      <td>Orientado A Filas</td>\n",
-       "      <td>Write Heavy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Json</th>\n",
        "      <td>No Binary</td>\n",
        "      <td>Mensajes Intercambiados Entre Browsers o Herra...</td>\n",
@@ -753,7 +754,7 @@
        "    <tr>\n",
        "      <th>XML</th>\n",
        "      <td>No Binary</td>\n",
-       "      <td>.Mensajes Intercambiados Entre Browsers o Herr...</td>\n",
+       "      <td>Mensajes Intercambiados Entre Browsers o Herra...</td>\n",
        "      <td>Browsers</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -767,41 +768,41 @@
       "text/plain": [
        "                Tipo                                        Descripcion  \\\n",
        "Avro          Binary    Mensajes Intercambiados Entre 2 o mas Servicios   \n",
+       "Protobuff     Binary    Mensajes Intercambiados Entre 2 o mas Servicios   \n",
        "Parquet       Binary    Mensajes Intercambiados Entre 2 o mas Servicios   \n",
        "ORC           Binary    Mensajes Intercambiados Entre 2 o mas Servicios   \n",
-       "Protobuff     Binary    Mensajes Intercambiados Entre 2 o mas Servicios   \n",
        "Json       No Binary  Mensajes Intercambiados Entre Browsers o Herra...   \n",
-       "XML        No Binary  .Mensajes Intercambiados Entre Browsers o Herr...   \n",
+       "XML        No Binary  Mensajes Intercambiados Entre Browsers o Herra...   \n",
        "\n",
        "          Herramienta       Compresion Recomendada Divisivilidad  \\\n",
        "Avro            Kafka  POCO EFICIENTE AL COMPRIMIR       Parcial   \n",
+       "Protobuff       Kafka  POCO EFICIENTE AL COMPRIMIR       Parcial   \n",
        "Parquet         Spark                       Snappy       Parcial   \n",
        "ORC              Hive                         ZLIB      Completa   \n",
-       "Protobuff       Kafka  POCO EFICIENTE AL COMPRIMIR       Parcial   \n",
        "Json         Browsers                                              \n",
        "XML          Browsers                                              \n",
        "\n",
        "          Tipo de Almacenamiento  Tipo de Uso  \n",
        "Avro           Orientado A Filas  Write Heavy  \n",
+       "Protobuff      Orientado A Filas  Write Heavy  \n",
        "Parquet     Orientado A Columnas   Read Heavy  \n",
        "ORC         Orientado A Columnas   Read Heavy  \n",
-       "Protobuff      Orientado A Filas  Write Heavy  \n",
        "Json                                           \n",
        "XML                                            "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "algoritmos = {'Avro':['Binary','Mensajes Intercambiados Entre 2 o mas Servicios','Kafka','POCO EFICIENTE AL COMPRIMIR','Parcial','Orientado A Filas','Write Heavy'],\n",
-    "              'Parquet':['Binary','Mensajes Intercambiados Entre 2 o mas Servicios','Spark','Snappy','Parcial','Orientado A Columnas','Read Heavy'],\n",
-    "              'ORC':['Binary','Mensajes Intercambiados Entre 2 o mas Servicios','Hive','ZLIB','Completa','Orientado A Columnas','Read Heavy'],\n",
     "              'Protobuff':['Binary','Mensajes Intercambiados Entre 2 o mas Servicios','Kafka','POCO EFICIENTE AL COMPRIMIR','Parcial','Orientado A Filas','Write Heavy'],\n",
+    "              'Parquet':['Binary','Mensajes Intercambiados Entre 2 o mas Servicios','Spark','Snappy','Parcial','Orientado A Columnas','Read Heavy'],\n",
+    "              'ORC':['Binary','Mensajes Intercambiados Entre 2 o mas Servicios','Hive','ZLIB','Completa','Orientado A Columnas','Read Heavy'],              \n",
     "              'Json':['No Binary','Mensajes Intercambiados Entre Browsers o Herramientas','Browsers','','','',''],\n",
-    "              'XML':['No Binary','.Mensajes Intercambiados Entre Browsers o Herramientas','Browsers','','','','']              \n",
+    "              'XML':['No Binary','Mensajes Intercambiados Entre Browsers o Herramientas','Browsers','','','','']              \n",
     "             }\n",
     "\n",
     "indices = ['Tipo','Descripcion','Herramienta','Compresion Recomendada', 'Divisivilidad', 'Tipo de Almacenamiento','Tipo de Uso']\n",
