adicionadas caracteristicas Hadoop, ACID, BASE, CAP

--- a/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_Fundamentos.ipynb
+++ b/Hadoop-Spark Dockerizados/Fundamentos/Hadoop_Fundamentos.ipynb
@@ -12,6 +12,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <center> CARACTERISTICAS HADOOP </center>\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"hadoop-caracteristicas.png\">\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"caracteristicas-hadoop.png\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <center> **CICLO DE LOS DATOS** </center>\n",
     "\n",
     "<div style=\"text-align:center\">\n",
@@ -2150,6 +2164,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <center> ACID VS TEOREMA DE CAP VS BASE</center>\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"acid-cap-base.png\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> CARACTERISTICAS BASES DE DATOS</center>\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"bases-de-datos-comparativa.png\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <center> COMPONENTES **HDFS**</center>\n",
     "\n",
     "* **Namenode** controla el funcionamiento de los trabajos de datos.\n",
@@ -3103,7 +3144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
