adicionada fase hdfs

--- a/Hadoop-Spark Dockerizados/Fundamentos/Hadoop/Hadoop_Fundamentos.ipynb
+++ b/Hadoop-Spark Dockerizados/Fundamentos/Hadoop/Hadoop_Fundamentos.ipynb
@@ -2003,6 +2003,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <center> PROCESO **HDFS**</center>\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"HDFS_PROCESS.png\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"text-align:center\">\n",
     "    <img src=\"cluster.png\">\n",
     "</div>\n",
