--- a/Hadoop-Spark Dockerizados/Fundamentos/Analitica/Analitica_Fundamentos.ipynb
+++ b/Hadoop-Spark Dockerizados/Fundamentos/Analitica/Analitica_Fundamentos.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <center>**BIG DATA**</center>\n",
+    "## Es una Tecnología que se usa, cuando es necesario procesar un volumen de información tan grande, que se vuelve inviable de procesar en una sola máquina.\n",
+    "## * Se Útiliza un **componente Tecnologíco como Hadoop y Spark para este procesamiento**.\n",
+    "## * Se apoya en un **componente de data y Analytics con algoritmos de Aprendizaje Supervisado y Aprendizaje no supervisado**.\n",
+    "## * **Aplicable a multiples casos de uso.**\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"esquema_Data_y_analytics.png\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <center>**TIPOS DE PROCESAMIENTO**</center>\n",
     "<div style=\"text-align:center\">\n",
     "    <img src=\"tiempos-procesamiento.png\">\n",
@@ -87,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
