adicionada comparativas roles big data

--- a/Hadoop-Spark Dockerizados/Fundamentos/Analitica/Analitica_Fundamentos.ipynb
+++ b/Hadoop-Spark Dockerizados/Fundamentos/Analitica/Analitica_Fundamentos.ipynb
@@ -19,6 +19,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **Data Scientist vs Data Engineer vs Data Analyst**\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"comparativa.png\">\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "# **Stack**\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"stack.png\">\n",
+    "</div>\n",
+    "\n",
+    "# **Skill set**\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"skills.png\">\n",
+    "</div>\n",
+    "\n",
+    "# **Roles and Responsibilities**\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"roles.png\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <center>**TIPOS DE PROCESAMIENTO**</center>\n",
     "<div style=\"text-align:center\">\n",
     "    <img src=\"tiempos-procesamiento.png\">\n",
